update: block upgrade when nfs+rgw is deployed
This is an unsupported configuration since there
are issues with RGW+NFS upgraded from Nautilus to Pacific.

This approach might be seen as a bit aggressive but it is preferable
to wait before upgrading in that case.

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1970003

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -14,6 +14,24 @@
 #   - if you use an ISO, you have to change the ceph_rhcs_iso_path to the directory containing the new Ceph version
 #
 
+- name: block upgrade if nfs+rgw deployed
+  hosts: "{{ nfs_group_name | default('nfss') }}"
+  serial: 1
+  become: True
+  tasks:
+    - name: import_role ceph-defaults
+      import_role:
+        name: ceph-defaults
+
+    - name: block upgrade if nfs+rgw deployed
+      fail:
+        msg: >
+          Upgrading to Ceph Pacific isn't supported with nfs+rgw.
+          This will be supported soon in a new release of Ceph Pacific.
+      when:
+        - groups.get(nfs_group_name, []) | length > 0
+        - nfs_obj_gw | bool
+
 - name: confirm whether user really meant to upgrade the cluster
   hosts: localhost
   become: false
@@ -27,6 +45,10 @@
       private: no
 
   tasks:
+    - name: import_role ceph-defaults
+      import_role:
+        name: ceph-defaults
+
     - name: exit playbook, if user did not mean to upgrade cluster
       fail:
         msg: >
@@ -35,10 +57,6 @@
            use `-e ireallymeanit=yes` on the command line when
            invoking the playbook"
       when: ireallymeanit != 'yes'
-
-    - name: import_role ceph-defaults
-      import_role:
-        name: ceph-defaults
 
     - name: check if a legacy grafana-server group exists
       import_role:
