--- a/roles/ceph-nfs/tasks/start_nfs.yml
+++ b/roles/ceph-nfs/tasks/start_nfs.yml
@@ -38,6 +38,10 @@
     group: root
     mode: "0755"
 
+- name: debug
+  debug:
+    msg: "{{ nfs_obj_gw | default('__debug__') }}"
+
 - name: generate ganesha configuration file
   template:
     src: "ganesha.conf.j2"
