dashboard: split monitoring deployment tools from ceph dashboard deployment
Add monitoring_enabled variable for deploying prometheus, grafana, alertmanager and use dashboard_enabled variable just for deploying and configuring ceph dashboard

Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/dashboard.yml
+++ b/dashboard.yml
@@ -1,89 +1,4 @@
 ---
-- hosts:
-    - "{{ mon_group_name|default('mons') }}"
-    - "{{ osd_group_name|default('osds') }}"
-    - "{{ mds_group_name|default('mdss') }}"
-    - "{{ rgw_group_name|default('rgws') }}"
-    - "{{ mgr_group_name|default('mgrs') }}"
-    - "{{ rbdmirror_group_name|default('rbdmirrors') }}"
-    - "{{ nfs_group_name|default('nfss') }}"
-    - "{{ iscsi_gw_group_name|default('iscsigws') }}"
-    - "{{ monitoring_group_name|default('monitoring') }}"
-  gather_facts: false
-  become: true
-  pre_tasks:
-    - name: set ceph node exporter install 'In Progress'
-      run_once: true
-      set_stats:
-        data:
-          installer_phase_ceph_node_exporter:
-            status: "In Progress"
-            start: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
-
-  tasks:
-    - import_role:
-        name: ceph-defaults
-      tags: ['ceph_update_config']
-    - import_role:
-        name: ceph-facts
-      tags: ['ceph_update_config']
-    - import_role:
-        name: ceph-container-engine
-    - import_role:
-        name: ceph-container-common
-        tasks_from: registry
-      when:
-        - not containerized_deployment | bool
-        - ceph_docker_registry_auth | bool
-    - import_role:
-        name: ceph-node-exporter
-
-  post_tasks:
-    - name: set ceph node exporter install 'Complete'
-      run_once: true
-      set_stats:
-        data:
-          installer_phase_ceph_node_exporter:
-            status: "Complete"
-            end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
-
-- hosts: "{{ monitoring_group_name }}"
-  gather_facts: false
-  become: true
-  pre_tasks:
-    - name: set ceph grafana install 'In Progress'
-      run_once: true
-      set_stats:
-        data:
-          installer_phase_ceph_grafana:
-            status: "In Progress"
-            start: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
-
-  tasks:
-    - import_role:
-        name: ceph-defaults
-      tags: ['ceph_update_config']
-    - import_role:
-        name: ceph-facts
-      tags: ['ceph_update_config']
-    - import_role:
-        name: ceph-facts
-        tasks_from: grafana
-      tags: ['ceph_update_config']
-    - import_role:
-        name: ceph-prometheus
-    - import_role:
-        name: ceph-grafana
-
-  post_tasks:
-    - name: set ceph grafana install 'Complete'
-      run_once: true
-      set_stats:
-        data:
-          installer_phase_ceph_grafana:
-            status: "Complete"
-            end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
-
 # using groups[] here otherwise it can't fallback to the mon if there's no mgr group.
 # adding an additional | default(omit) in case where no monitors are present (external ceph cluster)
 - hosts: "{{ groups[mgr_group_name] | default(groups[mon_group_name]) | default(omit) }}"
@@ -108,6 +23,8 @@
     - import_role:
         name: ceph-facts
         tasks_from: grafana
+      when:
+        - monitoring_enabled | bool
       tags: ['ceph_update_config']
     - import_role:
         name: ceph-dashboard
