--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -171,7 +171,7 @@
           failed_when: false
           tags:
             - remove_img
-      when: dashboard_enabled | bool
+      when: monitoring_enabled | bool
 
 
 - name: purge ceph monitoring
@@ -231,7 +231,7 @@
             - /var/lib/prometheus
             - /etc/prometheus
           failed_when: false
-      when: dashboard_enabled | bool
+      when: monitoring_enabled | bool
 
 
 - name: purge ceph mds cluster
