--- a/infrastructure-playbooks/purge-container-cluster.yml
+++ b/infrastructure-playbooks/purge-container-cluster.yml
@@ -407,7 +407,7 @@
           failed_when: false
           tags:
             - remove_img
-      when: dashboard_enabled | bool
+      when: monitoring_enabled | bool
 
 - name: purge ceph-grafana
 
@@ -470,7 +470,7 @@
             - /var/lib/prometheus
             - /etc/prometheus
           failed_when: false
-      when: dashboard_enabled | bool
+      when: monitoring_enabled | bool
 
 - name: purge ceph-crash containers
   hosts:
