--- a/roles/ceph-facts/tasks/grafana.yml
+++ b/roles/ceph-facts/tasks/grafana.yml
@@ -4,7 +4,7 @@
   when:
     - groups.get(monitoring_group_name, []) | length > 0
     - ip_version == 'ipv4'
-    - dashboard_enabled | bool
+    - monitoring_enabled | bool
     - inventory_hostname in groups[monitoring_group_name]
 
 - name: set grafana_server_addr fact - ipv6
@@ -13,7 +13,7 @@
   when:
     - groups.get(monitoring_group_name, []) | length > 0
     - ip_version == 'ipv6'
-    - dashboard_enabled | bool
+    - monitoring_enabled | bool
     - inventory_hostname in groups[monitoring_group_name]
 
 - name: set grafana_server_addrs fact - ipv4
@@ -23,7 +23,7 @@
   when:
     - groups.get(monitoring_group_name, []) | length > 0
     - ip_version == 'ipv4'
-    - dashboard_enabled | bool
+    - monitoring_enabled | bool
 
 - name: set grafana_server_addrs fact - ipv6
   set_fact:
@@ -32,4 +32,4 @@
   when:
     - groups.get(monitoring_group_name, []) | length > 0
     - ip_version == 'ipv6'
-    - dashboard_enabled | bool
+    - monitoring_enabled | bool
