--- a/roles/ceph-infra/tasks/configure_firewall.yml
+++ b/roles/ceph-infra/tasks/configure_firewall.yml
@@ -269,6 +269,10 @@
       include_tasks: dashboard_firewall.yml
       when: dashboard_enabled | bool
 
+    - name: open monitoring ports
+      include_tasks: monitoring_firewall.yml
+      when: monitoring_enabled | bool
+
     - name: open ceph networks on haproxy
       firewalld:
         zone: "{{ ceph_rgwloadbalancer_firewall_zone }}"
