--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -665,6 +665,11 @@ dummy:
 #dashboard_rgw_api_user_id: ceph-dashboard
 #dashboard_rgw_api_admin_resource: ''
 #dashboard_rgw_api_no_ssl_verify: False
+
+##############
+# MONITORING #
+##############
+#monitoring_enabled: True
 #dashboard_frontend_vip: ''
 #prometheus_frontend_vip: ''
 #alertmanager_frontend_vip: ''
