--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -105,14 +105,14 @@
         name: ceph-container-engine
       when:
         - (group_names != ['clients']) or (inventory_hostname == groups.get('clients', [''])|first)
-        - (containerized_deployment | bool) or (dashboard_enabled | bool)
+        - (containerized_deployment | bool) or (monitoring_enabled | bool)
 
     - import_role:
         name: ceph-container-common
         tasks_from: registry
       when:
         - (group_names != ['clients']) or (inventory_hostname == groups.get('clients', [''])|first)
-        - (containerized_deployment | bool) or (dashboard_enabled | bool)
+        - (containerized_deployment | bool) or (monitoring_enabled | bool)
         - ceph_docker_registry_auth | bool
 
     - name: set_fact rolling_update
@@ -963,8 +963,8 @@
     - import_role:
         name: ceph-defaults
 
-    - name: with dashboard configuration
-      when: dashboard_enabled | bool
+    - name: with monitoring configuration
+      when: monitoring_enabled | bool
       block:
         - name: stop node-exporter
           service:
@@ -993,8 +993,8 @@
     - import_role:
         name: ceph-defaults
 
-    - name: with dashboard configuration
-      when: dashboard_enabled | bool
+    - name: with monitoring configuration
+      when: monitoring_enabled | bool
       block:
         - name: stop monitoring services
           service:
@@ -1032,6 +1032,8 @@
         - import_role:
             name: ceph-facts
             tasks_from: grafana
+          when:
+            - monitoring_enabled | bool
         - import_role:
             name: ceph-dashboard
 
