--- a/roles/ceph-dashboard/tasks/configure_dashboard.yml
+++ b/roles/ceph-dashboard/tasks/configure_dashboard.yml
@@ -151,7 +151,8 @@
   command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-grafana-api-username {{ grafana_admin_user }}"
   delegate_to: "{{ groups[mon_group_name][0] }}"
   run_once: true
-  changed_when: false
+  when:
+    - monitoring_enabled | bool
 
 - name: set grafana api password
   command: "{{ ceph_cmd }} --cluster {{ cluster }} dashboard set-grafana-api-password -i -"
@@ -160,7 +161,8 @@
     stdin_add_newline: no
   delegate_to: "{{ groups[mon_group_name][0] }}"
   run_once: true
-  changed_when: false
+  when:
+    - monitoring_enabled | bool
 
 - name: disable ssl verification for grafana
   command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-grafana-api-ssl-verify False"
@@ -170,23 +172,28 @@
   when:
     - dashboard_protocol == "https"
     - dashboard_grafana_api_no_ssl_verify | bool
+    - monitoring_enabled | bool
 
 - name: set alertmanager host
   command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-alertmanager-api-host http://{{ grafana_server_addrs | first }}:{{ alertmanager_port }}"
   delegate_to: "{{ groups[mon_group_name][0] }}"
   run_once: true
-  changed_when: false
+  when:
+    - monitoring_enabled | bool
 
 - name: set prometheus host
   command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-prometheus-api-host http://{{ grafana_server_addrs | first }}:{{ prometheus_port }}"
   delegate_to: "{{ groups[mon_group_name][0] }}"
   run_once: true
-  changed_when: false
+  when:
+    - monitoring_enabled | bool
 
 - include_tasks: configure_grafana_layouts.yml
   with_items: '{{ grafana_server_addrs }}'
   vars:
     grafana_server_addr: '{{ item }}'
+  when:
+    - monitoring_enabled | bool
 
 - name: config monitoring api url vip
   run_once: true
@@ -195,19 +202,25 @@
       command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-grafana-api-url {{ dashboard_protocol }}://{{ dashboard_frontend_vip }}:{{ grafana_port }}"
       delegate_to: "{{ groups[mon_group_name][0] }}"
       changed_when: false
-      when: dashboard_frontend_vip is defined and dashboard_frontend_vip | length > 0
+      when:
+        - dashboard_frontend_vip is defined and dashboard_frontend_vip | length > 0
+        - monitoring_enabled | bool
 
     - name: config alertmanager api url
       command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-alertmanager-api-host {{ dashboard_protocol }}://{{ alertmanager_frontend_vip }}:{{ alertmanager_port }}"
       delegate_to: "{{ groups[mon_group_name][0] }}"
       changed_when: false
-      when: alertmanager_frontend_vip is defined and alertmanager_frontend_vip | length > 0
+      when:
+        - alertmanager_frontend_vip is defined and alertmanager_frontend_vip | length > 0
+        - monitoring_enabled | bool
 
     - name: config prometheus api url
       command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-prometheus-api-host {{ dashboard_protocol }}://{{ prometheus_frontend_vip }}:{{ prometheus_port }}"
       delegate_to: "{{ groups[mon_group_name][0] }}"
       changed_when: false
-      when: prometheus_frontend_vip is defined and prometheus_frontend_vip | length > 0
+      when:
+        - prometheus_frontend_vip is defined and prometheus_frontend_vip | length > 0
+        - monitoring_enabled | bool
 
 - name: dashboard object gateway management frontend
   when: groups.get(rgw_group_name, []) | length > 0
