--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -657,6 +657,11 @@ dashboard_grafana_api_no_ssl_verify: "{{ true if dashboard_protocol == 'https' a
 dashboard_rgw_api_user_id: ceph-dashboard
 dashboard_rgw_api_admin_resource: ''
 dashboard_rgw_api_no_ssl_verify: False
+
+##############
+# MONITORING #
+##############
+monitoring_enabled: True
 dashboard_frontend_vip: ''
 prometheus_frontend_vip: ''
 alertmanager_frontend_vip: ''
