--- a/roles/ceph-mgr/tasks/pre_requisite.yml
+++ b/roles/ceph-mgr/tasks/pre_requisite.yml
@@ -3,7 +3,7 @@
   set_fact:
     ceph_mgr_packages: "{{ ceph_mgr_packages | union(['python3-saml' if ansible_facts['distribution_major_version'] | int == 8 else 'python-saml']) }}"
   when:
-    - dashboard_enabled | bool
+    - dashboard_enabled | bool or monitoring_enabled | bool
     - ansible_facts['distribution'] == 'RedHat'
 
 - name: set_fact ceph_mgr_packages for dashboard
