--- a/roles/ceph-validate/tasks/main.yml
+++ b/roles/ceph-validate/tasks/main.yml
@@ -222,12 +222,19 @@
         msg: "you must add at least one node in the monitoring hosts group"
       when: groups[monitoring_group_name] | length < 1
 
-    - name: fail when dashboard_admin_password and/or grafana_admin_password are not set
+    - name: fail when grafana_admin_password is not set
       fail:
-        msg: "you must set dashboard_admin_password and grafana_admin_password."
+        msg: "you must set grafana_admin_password."
+      when:
+        - grafana_admin_password is undefined
+  when: monitoring_enabled | bool
+
+- block:
+    - name: fail when dashboard_admin_password is not set
+      fail:
+        msg: "you must set dashboard_admin_password."
       when:
         - dashboard_admin_password is undefined
-          or grafana_admin_password is undefined
   when: dashboard_enabled | bool
 
 - name: validate container registry credentials
