cephadm_adopt: add any_errors_fatal on play
Add any_errors_fatal: true in cephadm-adopt playbook.
We should stop the playbook execution when a task throws an error.
Otherwise it can lead to unexpected behavior.

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1976179

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit 3b804a61dd532ee5516c036d5156d9a110c0dced)

--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -35,6 +35,7 @@
     - "{{ iscsi_gw_group_name|default('iscsigws') }}"
     - "{{ grafana_server_group_name|default('grafana-server') }}"
   become: true
+  any_errors_fatal: True
   gather_facts: false
   vars:
     delegate_facts_host: true
@@ -324,6 +325,7 @@
   serial: 1
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -371,6 +373,7 @@
   serial: 1
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -406,6 +409,7 @@
   hosts: "{{ mon_group_name|default('mons') }}[0]"
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -424,6 +428,7 @@
   serial: 1
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -505,6 +510,7 @@
   hosts: "{{ mon_group_name|default('mons') }}[0]"
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -522,6 +528,7 @@
   hosts: "{{ mds_group_name|default('mdss') }}"
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -539,6 +546,7 @@
   serial: 1
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -583,6 +591,7 @@
   hosts: "{{ rgw_group_name|default('rgws') }}"
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -647,6 +656,7 @@
   serial: 1
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -704,6 +714,7 @@
   serial: 1
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -842,6 +853,7 @@
   hosts: "{{ rbdmirror_group_name|default('rbdmirrors') }}"
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -859,6 +871,7 @@
   serial: 1
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -898,6 +911,7 @@
   hosts: "{{ iscsi_gw_group_name|default('iscsigws') }}"
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -915,6 +929,7 @@
   serial: 1
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -959,6 +974,7 @@
     - "{{ rbdmirror_group_name|default('rbdmirrors') }}"
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -983,6 +999,7 @@
   serial: 1
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -1145,6 +1162,7 @@
     - "{{ grafana_server_group_name|default('grafana-server') }}"
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -1176,6 +1194,7 @@
   hosts: "{{ mon_group_name|default('mons') }}[0]"
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
@@ -1225,6 +1244,7 @@
   hosts: "{{ mon_group_name|default('mons') }}[0]"
   become: true
   gather_facts: false
+  any_errors_fatal: True
   tasks:
     - import_role:
         name: ceph-defaults
