tox: remove ceph_dev variables and dev_setup calls
Since pacific is a stable release then we don't need to use shaman for getting
the pacific build.

Signed-off-by: Dimitri Savineau <dsavinea@redhat.com>

--- a/tox-update.ini
+++ b/tox-update.ini
@@ -28,9 +28,10 @@ setenv=
   container: PLAYBOOK = site-container.yml.sample
   non_container: PLAYBOOK = site.yml.sample
 
-  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-bis-pacific
-  UPDATE_CEPH_DEV_BRANCH = pacific
-  UPDATE_CEPH_DEV_SHA1 = latest
+  CEPH_DOCKER_IMAGE_TAG = latest-octopus
+  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-pacific
+  CEPH_STABLE_RELEASE = octopus
+  UPDATE_CEPH_STABLE_RELEASE = pacific
   ROLLING_UPDATE = True
 deps= -r{toxinidir}/tests/requirements.txt
 changedir={toxinidir}/tests/functional/all_daemons{env:CONTAINER_DIR:}
@@ -52,10 +53,10 @@ commands=
   # When rendering the ganesha.conf.j2 template, it complains because of undefined variables in the block "{% if nfs_obj_gw | bool %}" although we explicitly set this variable to false (see below).
   bash -c 'ANSIBLE_CONFIG={envdir}/tmp/ceph-ansible/ansible.cfg ansible-playbook -vv -i {envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/hosts {envdir}/tmp/ceph-ansible/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
-      ceph_stable_release=octopus \
+      ceph_stable_release={env:CEPH_STABLE_RELEASE:octopus} \
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.ceph.io} \
       ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph-ci/daemon} \
-      ceph_docker_image_tag=latest-octopus \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-octopus} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
@@ -65,10 +66,9 @@ commands=
       ceph_nfs_rgw_secret_key=fake_secret_key \
   "'
 
-  non_container: ansible-playbook -vv -i "localhost," -c local {toxinidir}/tests/functional/dev_setup.yml --extra-vars "dev_setup=True change_dir={changedir} ceph_dev_branch=pacific ceph_dev_sha1=latest setup_nfs_dev_repo=false" --tags "vagrant_setup"
   ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --extra-vars "\
       ireallymeanit=yes \
-      ceph_dev_sha1=latest \
+      ceph_stable_release={env:UPDATE_CEPH_STABLE_RELEASE:pacific} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
@@ -76,6 +76,6 @@ commands=
       nfs_obj_gw=False \
   "
 
-  bash -c "CEPH_STABLE_RELEASE=pacific py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/{env:INVENTORY} --ssh-config={changedir}/vagrant_ssh_config {toxinidir}/tests/functional/tests"
+  bash -c "CEPH_STABLE_RELEASE={env:UPDATE_CEPH_STABLE_RELEASE:pacific} py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/{env:INVENTORY} --ssh-config={changedir}/vagrant_ssh_config {toxinidir}/tests/functional/tests"
 
   vagrant destroy --force
