--- a/site.yml.sample
+++ b/site.yml.sample
@@ -57,6 +57,8 @@
     - import_role:
         name: ceph-facts
     - import_role:
+        name: ceph-handler
+    - import_role:
         name: ceph-validate
     - import_role:
         name: ceph-infra
