workflow: add syntax check
This adds the ansible --syntax-check test in the ansible-lint workflow

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit 5ed423ad8886a8985a4aa6424930f812864845bc)

--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -14,8 +14,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - run: pip install -r <(grep ansible tests/requirements.txt) ansible-lint==4.3.7
+      - run: pip install -r <(grep ansible tests/requirements.txt) ansible-lint==4.3.7 netaddr
         if: matrix.python-version == '3.6'
-      - run: pip install -r <(grep ansible tests/requirements.txt) ansible-lint ruamel.yaml==0.16.13 ruamel.yaml.clib==0.2.2
+      - run: pip install -r <(grep ansible tests/requirements.txt) ansible-lint ruamel.yaml==0.16.13 ruamel.yaml.clib==0.2.2 netaddr
         if: matrix.python-version == '2.7'
       - run: ansible-lint -x 106,204,205,208 -v --force-color ./roles/*/ ./infrastructure-playbooks/*.yml site-container.yml.sample site-container.yml.sample
+      - run: ansible-playbook -i ./tests/functional/all_daemons/hosts site.yml.sample --syntax-check --list-tasks -vv
+      - run: ansible-playbook -i ./tests/functional/all_daemons/hosts site-container.yml.sample --syntax-check --list-tasks -vv
+      - run: ansible-playbook -i ./tests/functional/all_daemons/hosts infrastructure-playbooks/*.yml --syntax-check --list-tasks -vv
