tests: test remove_rpm_post_container_migration=true
In order to test the ceph rpm packages removal doesn't fail.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -135,6 +135,7 @@ commands=
 commands=
   ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml --extra-vars "\
       ireallymeanit=yes \
+      remove_pkg_post_container_migration=true \
       ceph_docker_image_tag=latest-master-devel \
       ceph_docker_registry=quay.ceph.io \
       ceph_docker_image=ceph-ci/daemon \
