--- a/roles/ceph-validate/tasks/check_devices.yml
+++ b/roles/ceph-validate/tasks/check_devices.yml
@@ -83,7 +83,7 @@
         unit: MiB
       register: devices_parted
       failed_when: False
-      with_items: "{{ devices | default([]) }}"
+      with_items: "{{ devices }}"
 
     - name: fail if one of the devices is not a device
       fail:
