cephadm-adopt: pull image when containerized_deployment
Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -135,7 +135,7 @@
       retries: "{{ docker_pull_retry }}"
       delay: 10
       when:
-        - not containerized_deployment | bool
+        - containerized_deployment | bool
         - inventory_hostname in groups.get(mon_group_name, []) or
           inventory_hostname in groups.get(osd_group_name, []) or
           inventory_hostname in groups.get(mds_group_name, []) or
